--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <script>
             var images = [
                 // { src: 'images/1.png', title: '' },
-                { src: 'images/2.png', title: '' },
-                { src: 'images/22.png', title: '' },
+                { src: '/images/2.png', title: '' },
+                { src: '/images/22.png', title: '' },
                 // { src: 'images/3.png', title: '' },
                 // { src: 'images/4.png', title: '' },
             ];
